# gpt-image-2-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/gptimage2/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  settings.gradle.kts
java/runapi-gpt-image-2/: build.gradle.kts
java/runapi-gpt-image-2/src/main/java/ai/runapi/gptimage2/: GptImage2Client.java
java/runapi-gpt-image-2/src/main/java/ai/runapi/gptimage2/resources/: EditImageResource.java  (+2 more)
java/runapi-gpt-image-2/src/test/java/ai/runapi/gptimage2/: GptImage2ClientTest.java  GptImage2LiveApiSmokeTest.java  GptImage2LocalApiSmokeTest.java
js/: README.md  package.json
js/skills/gpt-image-2/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: edit-image.ts  text-to-image.ts
js/tests/unit/: edit-image.test.ts  text-to-image.test.ts
python/: README.md  pyproject.toml
python/src/runapi/gpt_image_2/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/gpt_image_2/resources/: edit_image.py  text_to_image.py
python/tests/: test_client.py
ruby/: README.md  runapi-gpt-image-2.gemspec  runapi-gpt_image_2.gemspec
ruby/lib/: runapi-gpt_image_2.rb
ruby/lib/runapi/: gpt_image_2.rb
ruby/lib/runapi/gpt_image_2/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/gpt_image_2/resources/: edit_image.rb  text_to_image.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/gpt_image_2/: client_spec.rb
ruby/spec/runapi/gpt_image_2/resources/: edit_image_spec.rb  text_to_image_spec.rb
(+12 files in other folders)
